--- a/src/pages/detail/detail.less
+++ b/src/pages/detail/detail.less
@@ -4,72 +4,223 @@
     white-space: nowrap;
 }
 
+.content {
+	background-color: #fff;
+}
 .section {
-	position: fixed;
-	height: 100%;
 	z-index: 1;
 	box-sizing: border-box;
-	padding-bottom: 100rpx;
-	top: 0;
-	left: 0;
-	padding: 0;
-	padding-bottom: 20rpx;
+	padding: 0 0 135rpx 0;
+	margin: 0 auto;
+	width: 624rpx;
+	background-color: #fff;
 	&.pb0 {
 		padding-bottom: 0;
 	}
-	.first-img-section {
-		float: left;
-		width: 498rpx;
-		height: 496rpx;
-		margin-right: 2rpx;
-		margin-bottom: 2rpx;
-		overflow: hidden;
+
+	&:after {
+		content: ' ';
+		display: block;
+		clear: both;
+	}
+
+	.album-info-wrapper {
+		box-sizing: border-box;
+		padding: 55rpx 0 45rpx;
+		background-color: #fff;
+		text-align: left;
 		position: relative;
 
-		.img {
-			width: 100%;
-			height: 498rpx;
+		.name {
+			line-height: 55rpx;
+			font-size: 50rpx;
+			color: #333;
+			display: block;
+			width: 545rpx;
+			margin-bottom: 15rpx;
+			padding: 0;
 		}
+		.date {
+			height: 22rpx;
+			line-height: 22rpx;
+			font-size: 22rpx;
+			color: #a0a0a0;
+			margin-bottom: 36rpx;
+			display: block;
+			padding: 0;
+		}
+		.user-section {
+			text-align: left;
+			>.list {
+				text-align: left;
+				margin-bottom: 20rpx;
 
-		.txt-section {
-			width: 100%;
+				.headimg {
+					width: 50rpx;
+					height: 50rpx;
+					margin-right: 12rpx;
+					border-radius: 50%;
+					vertical-align: middle;
+				}
+				.num {
+					font-size: 22rpx;
+					color: #a3a3a3;
+					display: inline-block;
+					line-height: 50rpx;
+					vertical-align: middle;
+				}
+			}
+		}
+		.manage {
 			position: absolute;
-			left: 0;
-			top: 200rpx;	
-			background-color: rgba(0, 0, 0, 0.3);
-			padding-top: 20rpx;
-			padding-bottom: 20rpx;
-			text-align: center;
-			color: #fff;
+			font-size: 22rpx;
+			color: #ff6370;
+			right: 0;
+			top: 60rpx;
+			background-image: url(/dist/images/manage-icon1.png);
+			background-repeat: no-repeat;
+			background-size: 24rpx 25rpx;
+			background-position: left center;
+			padding-left:36rpx;
+			height:28rpx;
+			line-height:30rpx;
+		}
+	}
 
-			.theme {
+	.header {
+		padding: 50rpx 0;
+		background-color: #fff;
+		margin-bottom: 5rpx;
+
+		.theme-section {
+			text-align: center;
+			margin-bottom: 40rpx;
+
+			>.theme {
+				height: 62rpx;
+				line-height: 62rpx;
 				font-size: 40rpx;
-				display: block;
-				margin-bottom: 5rpx;
-				height: 50rpx;
-				line-height: 50rpx;
-				.overflow-text();
+				margin-right: 10rpx;
+				display: inline-block;
+				vertical-align:middle;
+				color: #333;
+				margin-left: 60rpx;
+
+				&.center {
+					margin: 0;
+				}
 			}
-			.sponsor{
-				font-size: 26rpx;
-				display: block;
-				height: 35rpx;
-				line-height: 35rpx;
-				.overflow-text();
+			>.icon {
+				width: 50rpx;
+				height: 50rpx;
+				background-image: url(/dist/images/edit-theme-button.png);
+				background-position: 0 25rpx;
+				background-size: 19rpx;
+				background-repeat: no-repeat;
+				display: inline-block;
+				vertical-align:middle;
+			}
+			>.theme-input {
+				width: 250rpx;
+				height: 60rpx;
+				font-size: 36rpx;
+				line-height: 60rpx;
+				border: 1rpx solid #dfdfdf;
+				margin: 0 auto;
+				color: #333;
+			}
+		}
+
+		.user-section {
+			text-align: center;
+			>.list {
+				text-align: center;
+				margin-bottom: 20rpx;
+
+				.headimg {
+					width: 60rpx;
+					height: 60rpx;
+					margin: 0 5rpx;
+					border-radius: 50%;
+				}
+			}
+			>.num {
+				font-size: 24rpx;
+				color: #999;
 			}
 		}
 	}
 
-	.img-item {
-		float: left;
-		width: 248rpx;
-		height: 248rpx;
-		margin-right: 2rpx;
-		margin-bottom: 2rpx;
+	.imgs-section {
+
+		&:after {
+			content: ' ';
+			display: block;
+			clear: both;
+		}
+		.img-item {
+			float: left;
+			width: 200rpx;
+			height: 200rpx;
+			margin-right: 12rpx;
+			margin-bottom: 12rpx;
+			position: relative;
+
+			&:nth-child(3n) {
+				margin-right: 0;
+			}
+
+			.img {
+				width: 200rpx;
+				height: 200rpx;
+			}
+
+			.del-choose {
+				width: 248rpx;
+				height: 248rpx;
+				z-index: 10;
+				background-image: url(/dist/images/huan.png);
+				background-position: 205rpx 20rpx;
+				background-repeat: no-repeat;
+				background-size: 32rpx;
+				position: absolute;
+				top: 0;
+				left: 0;
+				background-color: rgba(0, 0, 0, 0.1);
+				text-align: center;
+				padding-top: 200rpx;
+				box-sizing: border-box;
+				&.selected {
+					background-image: url(/dist/images/gou.png)
+				}
+
+				.name {
+					font-size: 26rpx;
+					color: #fff;
+				}
+			}
+
+		}
+
+		.remark {
+			height: 60rpx;
+	        line-height: 60rpx;
+	        display: block;
+	        text-align: center;
+	        color:#a3a3a3;
+	        font-size: 28rpx;
+	        width: 100%;
+	        margin-bottom: 400rpx;
+			margin-top: 240rpx;
+		}
 	}
+
 
 	.tips {
-		margin-top: 20rpx;
+		margin-top:42rpx;
+		margin-bottom:40rpx;
+		height: 100rpx;
+		line-height: 100rpx;
 		clear: both;
 		.tip {
 			font-size: 32rpx;
@@ -77,26 +228,42 @@
 			text-align: center;
 		}
 	}
+
 }
 
-.btn {
-    padding: 0;
-    margin: 0;
-    border-radius: 50%;
-    border: none;
-    background-image: url(/dist/images/p2.png);
-    background-size: 64rpx 64rpx;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 80rpx;
-    height: 80rpx;
-    position: fixed;
-    right: 60rpx;
-    bottom: 80rpx;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 200;
-    &:after {
-        border: none;
-    }
-}
+.add-photoes-section {
+	height: 135rpx;
+	background-color: rgba(255, 255, 255, 0.75);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	z-index: 2;
+	.add-photoes-btn {
+		width: 624rpx;
+		height: 88rpx;
+		line-height: 88rpx;
+		color: #fff;
+		text-align: center;
+		font-size: 34rpx;
+		background-color: rgba(255, 99, 112, 1);
+		border-radius: 5rpx;
+		display: block;
+		margin: 23rpx auto 0;
+		padding: 0;
 
+		&:after {
+			border: none;
+		}
+
+		.icon {
+			width: 44rpx;
+			height: 34rpx;
+			background-image: url(/dist/images/camera.png);
+			background-repeat: no-repeat;
+			background-size: 44rpx 34rpx;
+			background-position: left center;
+			padding-left: 57rpx;
+		}
+	}
+}
