--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,41 +1,95 @@
-.section {
-	padding-left: 20rpx;
-	position: fixed;
-	height: 100%;
-	z-index: 1;
-	box-sizing: border-box;
-	padding-bottom: 120rpx;
+@import url('../../common/less/mask.less');
+@import url('../../common/less/new_or_change_album_name.less');
+
+page {
+	background-color: #fff;
+}
+
+.test {
+	position: absolute;
 	top: 0;
 	left: 0;
-
+}
+.section {
+	z-index: 1;
+	box-sizing: border-box;
+	padding-bottom: 1rpx;
+	background-color: #fff;
 	&.pb0 {
 		padding-bottom: 0;
 	}
-
-	.list-item {
-		height: 164rpx;
-		border-bottom: 1rpx solid #d2d2d2;
-		box-sizing: border-box;
-		padding-top: 17rpx;
-		padding-bottom: 18rpx;
-
-		.img {
-			width: 128rpx;
-			height: 128rpx;
-			float: left;
-			margin-right: 38rpx;
+	.click-section {
+		&.view-hover {
+			background-color: #f4f4f4;
 		}
-		.name {
-			float: left;
-			height: 128rpx;
-			line-height: 128rpx;
-			font-size: 32rpx;
-			color: #333;
+
+	}
+	.list-item {
+		width: 620rpx;
+		border-bottom: 1rpx solid #ededed;
+		box-sizing: border-box;
+		padding-top: 54rpx;
+		padding-bottom: 20rpx;
+		//padding-left: 10rpx;
+		margin: 0 auto;
+		height: 342rpx;
+		box-sizing: border-box;
+		&:after {
+			content: '';
+			display: block;
+			clear: both;
+		}
+
+		.imgs-section {
+			//margin-bottom: 20rpx;
+			&:after {
+				content: '';
+				display: block;
+				clear: both;
+			}
+			.img {
+				width: 200rpx;
+				height: 200rpx;
+				margin-right: 10rpx;
+				float: left;
+				box-sizing: content-box;
+				padding:0;
+				border:none;
+
+				&:last-child {
+					margin-right: 0;
+				}
+			}
+		}
+
+		.introduce {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			line-height: 76rpx;
+			height: 76rpx;
+			.name {
+				font-size: 36rpx;
+				color: #333;
+				overflow: hidden;
+			    text-overflow: ellipsis;
+			    white-space: nowrap;
+			    flex: 1;
+			    margin-right: 5rpx;
+			}
+			.num {
+				font-size: 20rpx;
+				color: #999;
+				text-align: right;
+				margin-right: 15rpx;
+			}
 		}
 	}
 
 	.tips {
-		margin-top: 20rpx;
+		margin-top:42rpx;
+		margin-bottom:140rpx;
+
 		.tip {
 			font-size: 32rpx;
 			color: #999;
@@ -44,96 +98,142 @@
 	}
 }
 
-.new-btn {
+.methods-introduce {
+	width:620rpx;
+	margin: 75rpx auto 0;
+	height: 45rpx;
+	text-align: left;
+
+	>.txt {
+		border-radius: 35rpx;
+		border: 1rpx solid #eee;
+		font-size: 23rpx;
+		color: #b4b4b4;
+		padding: 9rpx 25rpx 7rpx;
+	}
+}
+
+.new-ablum-section {
+	height: 135rpx;
+	background-color: rgba(255, 255, 255, 0.75);
 	position: fixed;
 	bottom: 0;
 	left: 0;
-	height: 100rpx;
-	line-height: 100rpx;
-	color: #fff;
-	text-align: center;
-	font-size: 34rpx;
-	background-color: #1b1b1b;
 	width: 100%;
-	border-radius: 0;
 	z-index: 2;
+	.new-ablum-btn {
+		width: 620rpx;
+		height: 88rpx;
+		line-height: 88rpx;
+		color: #fff;
+		text-align: center;
+		font-size: 34rpx;
+		background-color: rgba(255, 99, 112, 1);
+		border-radius: 5rpx;
+		display: block;
+		margin: 23rpx auto 0;
+		padding: 0;
 
-	.icon {
-		height: 32rpx;
-		background-image: url(/dist/images/plus.png);
-		background-repeat: no-repeat;
-		background-size: 32rpx;
-		background-position: 0 0;
-		padding-left: 47rpx;
+		&:after {
+			border: none;
+		}
+
+		.icon {
+			height: 34rpx;
+			background-image: url(/dist/images/plus.png);
+			background-repeat: no-repeat;
+			background-size: 34rpx;
+			background-position: left center;
+			padding-left: 47rpx;
+		}
 	}
 }
 
-.mask {
+.empty-wrapper {
+	padding-top: 250rpx;
+	padding-left: 160rpx;
+	background-color: #fff;
+	box-sizing: border-box;
+	.title {
+		height: 90rpx;
+		line-height: 90rpx;
+		display: block;
+		text-align: left;
+		color:#b5b5b5;
+		font-size: 45rpx;
+	}
+
+}
+
+.delete-album-btn {
+	position: fixed;
+	width: 560rpx;
+	height: 100rpx;
+	z-index: 200;
+	top: 50%;
+	left: 50%;
+	margin-left: -280rpx;
+	margin-top: -50rpx;
+	line-height: 100rpx;
+	text-align: left;
+	text-indent: 40rpx;
+	font-size: 30rpx;
+	color: #333;
+	background-color: #fff;
+	border-radius: 10rpx;
+}
+
+.delete-album-modal {
 	position: fixed;
 	width: 100%;
-	height: 100%;
-	top: 0;
+	background-color: #efeff1;
 	left: 0;
-	background-color: rgba(0, 0, 0, 0.7);
-	z-index: 100;
-}
+	bottom: 0;
+	z-index: 2000;
+	text-align: center;
 
-.add-new-file {
-	background-color: #fcfcfc;
-	border-radius: 5rpx;
-	width: 700rpx;
-	position: fixed;
-	z-index: 200;
-	left: 50%;
-	margin-left: -350rpx;
-	top: 10%;
+	&.rise {
+		animation: rising 0.5s infinite;
+		animation-iteration-count: 1;
+		@keyframes  rising {
+			from {bottom: -400rpx;}
+			to {bottom: 0;}
+		}
+	}
 
-	.title {
-		text-align: center;
-		font-size: 32rpx;
+	&.lower {
+		animation: lowering 0.5s infinite;
+		animation-iteration-count: 1;
+		@keyframes  lowering {
+			from {bottom: 0;}
+			to {bottom: -400rpx;}
+		}
+	}
+
+	.delete-btn {
+		background-color: #fff;
+		margin-bottom: 12rpx;
+		padding: 24rpx 0;
+
+		.tit {
+			display: block;
+			font-size: 36rpx;
+			color: #ff4352;
+			line-height: 50rpx;
+		}
+		.sub-tit {
+			display: block;
+			font-size: 24rpx;
+			color: #99999b;
+			line-height: 38rpx;
+		}
+	}
+
+	.cancel-btn {
+		background-color: #fff;
 		color: #333;
-		height: 140rpx;
-		line-height: 140rpx;
-		display: block;
-	}
-
-	.file-name {
-		display: block;
-		width: 500rpx;
-		height: 50rpx;
-		line-height: 48rpx;
-		border-radius: 10rpx;
-		border: 1rpx solid #ccc;
-		font-size: 28rpx;
-		color: #555;
-		padding: 0 10rpx;
-		display: block;
-		margin: 0 auto 40rpx;
-
-		&.disabled {
-			border: 1px solid #e14800;
-		}
-	}
-
-	.btn {
-		float: left;
-		width: 50%;
-		font-size: 28rpx;
-		border-radius: 0;
-		border-top: 1px solid rgba(0, 0, 0, 0.2);
-		&.cancel {
-			color: #999;
-			border-bottom-left-radius: 10rpx;
-			border-right-width: 0;
-		}
-		&.confirm {
-			color: #ff4e00;
-			border-bottom-right-radius: 10rpx;
-		}
-		&:after {
-			border-radius: 0;
-		}
+		height: 100rpx;
+		line-height: 100rpx;
+		font-size: 32rpx;
 	}
 }
-
-
